src/test/deca/context/invalid/class/autoreference/boolean.deca
// Description:
//    Affectation de this à un boolean
//
// Resultats:
//    Incompatile type
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
		boolean a = this;
	}
}

{

}

